manifests/postgres-operator/ui-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: postgres-operator-ui
  namespace: default
  labels:
    application: postgres-operator-ui
spec:
  rules:
    - host: pgo.kube
      http:
        paths:
          - backend:
              serviceName: postgres-operator-ui
              servicePort: 80
